--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
   /* px 안써주면 *한 값임 */
   letter-spacing: 0;
   word-break: keep-all;
+
+  height: 5000px;
 }
 /* 공통요소 */
 .inner {
@@ -60,10 +62,13 @@ body {
   z-index: 9999;
   background: rgba(255, 255, 255, 0);
   transition: height 0.5s, background 0.5s;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 .header .inner {
   max-width: 100%;
   height: 100%;
+  
+  z-index: 9;
 }
 /*  left, top, right, bottom 사용시 반드시 position: absolute 쓰자 
     즉, position:relative 쓰지말자
@@ -126,15 +131,129 @@ body {
 .gnb > li > a:hover > span::after {
   width: 100%;
 }
+/* 
+  javaScript 에서는 display:none이면
+  선택이 안될 때가 있다.
+  opacity:0은 배제합니다. 작동이 됨
+*/
+.mb-bt {
+  position: absolute;
+  right: -20000px;
+  top: 24px;
+  width: 30px;
+  height: 22px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+.mb-bt span {
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #222;
+}
+.mb-bt span:nth-child(1) {
+  top: 0;
+  transition: transform 0.3s;
+}
+.mb-bt span:nth-child(2) {
+  top: calc(50% - 1px);
+  transition: opacity 0.2s;
+}
+.mb-bt span:nth-child(3) {
+  bottom: 0;
+  transition: transform 0.3s;
+}
+/* 모바일 메뉴 */
+.mb-nav {
+  /* 만약 relative라면 다른 영역에 영향을 준다 */
+  position: absolute;
+  left: 100%;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  padding-top: 90px;
+  transition: left 0.3s ease-in-out;
+}
+.mb-nav-gnb {
+}
+.mb-nav-gnb > li {
+  border-bottom: 1px solid #e5e5e5;
+}
+.mb-nav-gnb > li > a {
+  display: block;
+  padding: 20px 70px 20px 40px;
+    font-size: 24px;
+}
 /* 스크롤시 css 적용 */
 .header.active {
   height: 80px;
   background: rgba(255, 255, 255, 1);
 }
-.header.active .logo {
+.logo.active {
   top: 25px;
   background: url("../images/logo.png") no-repeat center;
   background-size: cover;
+}
+.logo.active-blue {
+  background: url("../images/logo.png") no-repeat center;
+  background-size: cover;
+}
+.gnb > li > a.active {
+  color: #222;
+} 
+/* 모바일 버튼 애니메이션 */
+.mb-bt.active span:nth-child(1) {
+  transform: rotate(45deg);
+  top: calc(50% - 1px);
+}
+.mb-bt.active span:nth-child(2) {
+  opacity: 0;
+}
+.mb-bt.active span:nth-child(3) {
+  transform: rotate(-45deg);
+  bottom: calc(50% - 1px);
+}
+/* 모바일 메뉴 애니메이션 */
+.mb-nav.active {
+  left: 0;
+}
+/* 숫자가 증가하는 형태는 모바일 작업 > 타블렛 > 데스크탑 */
+/* 숫자가 감소하는 형태는 데스크탑 작업 > 타블렛 > 모바일 */
+@media screen and (max-width: 1280px) {
+  .header {
+    height: 90px;
+  }
+  .logo {
+    top: 30px;
+    left: 20px;
+    width: 150px;
+    height: 30px;
+  }
+  .gnb > li > a {
+    padding: 25px 35px;
+  }
+}
+@media screen and (max-width: 1080px) {
+  .header {
+    height: 70px !important;
+  }
+  .logo {
+    top: 20px !important;
+    width: 120px;
+    height: 30px;
+  }
+  .gnb {
+    display: none;
+  }
+  .mb-bt {
+    right: 20px;
+  }
+}
+@media screen and (max-width: 480px) {
 }
 /* 비주얼 */
 .visual {
